--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <module>external/path-lstm</module>
         <module>external/stanford_3.3.1</module>
         <module>external/stanford_3.8.0</module>
+        <module>external/stanford_3.9.1</module>
     </modules>
 
     <properties>
