[Exp?] Add ExternalPOSHandler

--- a/external/external-commons/pom.xml
+++ b/external/external-commons/pom.xml
@@ -20,6 +20,11 @@
         </dependency>
         <dependency>
             <groupId>edu.illinois.cs.cogcomp</groupId>
+            <artifactId>illinois-corpusreaders</artifactId>
+            <version>4.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.illinois.cs.cogcomp</groupId>
             <artifactId>illinois-tokenizer</artifactId>
             <version>4.0.4</version>
         </dependency>
