--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>pipeline</module>
         <!--external tools -->
         <module>external/external-commons</module>
+        <module>external/cmu_ark_tweet_nlp</module>
         <module>external/clausie</module>
         <module>external/path-lstm</module>
         <module>external/stanford_3.3.1</module>
